Update design of concrete and steel

--- a/book/design/concrete/bubbledeck_floors.ipynb
+++ b/book/design/concrete/bubbledeck_floors.ipynb
@@ -77,15 +77,18 @@
     "\n",
     "Floor strucutre in which hollow spherical elements are placed. Parts of the structure are prefabricated. The possibilities are shown below:\n",
     "\n",
-    "```{figure} Images/Bubbledeck4.jpg```    \n",
+    "```{figure} Images/Bubbledeck4.jpg\n",
+    "```    \n",
     "\n",
     "Reinforcement modules where the spheres are clamped between the two reinforcement layers.\n",
     "\n",
-    "```{figure} Images/Bubbledeck5.jpg```    \n",
+    "```{figure} Images/Bubbledeck5.jpg\n",
+    "```    \n",
     "\n",
     "Aformentioned reinforcement modules with an additional concrete plate at the bottom side.\n",
     "\n",
-    "```{figure} Images/Bubbledeck6.jpg```    \n",
+    "```{figure} Images/Bubbledeck6.jpg\n",
+    "```    \n",
     "\n",
     "Fully or partially casted floor elements.\n"
    ]
@@ -120,15 +123,18 @@
    "source": [
     "### Cross section of a bubble deck floor\n",
     "\n",
-    "```{figure} Images/DetailBubbledeck1.jpg```    \n",
+    "```{figure} Images/DetailBubbledeck1.jpg\n",
+    "```    \n",
     "\n",
     "### Support of bubbledeck floor on concrete wall\n",
     "\n",
-    "```{figure} Images/DetailBubbledeck2.jpg```    \n",
+    "```{figure} Images/DetailBubbledeck2.jpg\n",
+    "```    \n",
     "\n",
     "### Support of bubble deck floor with cavity wall for residential construction\n",
     "\n",
-    "```{figure} Images/DetailBubbledeck3.jpg```    "
+    "```{figure} Images/DetailBubbledeck3.jpg\n",
+    "```    "
    ]
   }
  ],
