--- a/book/design/concrete/hollow_core_slabs.ipynb
+++ b/book/design/concrete/hollow_core_slabs.ipynb
@@ -23,8 +23,10 @@
     "- Standard fire resistance\n",
     "- Deflection under variable load of max. 0,003 L\n",
     "\n",
-    "```{figure} Images/HollowCore1.jpg```  \n",
-    "```{figure} Images/HollowCore2.jpg```  \n",
+    "```{figure} Images/HollowCore1.jpg\n",
+    "```  \n",
+    "```{figure} Images/HollowCore2.jpg\n",
+    "```  \n",
     "\n",
     "```{note}\n",
     "www.vbi.nl\n",
@@ -42,12 +44,18 @@
     "In contrast to what one may expect hollow core slabs also offer opportunities for free formed floor plans. The use of hollow core slabs is not restricted to the rectangular floor\n",
     "plans used in offices and flats. Both round shaps as chamfered egdes are possible. It is important to realize that the plates can be cut under an angle.\n",
     "\n",
-    "```{figure} Images/HollowCoreApplication1.jpg```    \n",
-    "```{figure} Images/HollowCoreApplication2.jpg```   \n",
-    "```{figure} Images/HollowCoreApplication3.jpg```   \n",
-    "```{figure} Images/HollowCoreApplication4.jpg```   \n",
-    "```{figure} Images/HollowCoreApplication5.jpg```   \n",
-    "```{figure} Images/HollowCoreApplication6.jpg```   \n",
+    "```{figure} Images/HollowCoreApplication1.jpg\n",
+    "```    \n",
+    "```{figure} Images/HollowCoreApplication2.jpg\n",
+    "```   \n",
+    "```{figure} Images/HollowCoreApplication3.jpg\n",
+    "```   \n",
+    "```{figure} Images/HollowCoreApplication4.jpg\n",
+    "```   \n",
+    "```{figure} Images/HollowCoreApplication5.jpg\n",
+    "```   \n",
+    "```{figure} Images/HollowCoreApplication6.jpg\n",
+    "```   \n",
     "\n",
     "## Execution aspects\n",
     "\n",
@@ -75,8 +83,10 @@
     "  \n",
     "The horizontal loads from the floor are transmitted by concrete ‘studs’ to the stabilizing elements of the building.\n",
     "\n",
-    "```{figure} Images/ExecutionAspects1.jpg```   \n",
-    "```{figure} Images/ExecutionAspects2.jpg``` \n",
+    "```{figure} Images/ExecutionAspects1.jpg\n",
+    "```   \n",
+    "```{figure} Images/ExecutionAspects2.jpg\n",
+    "``` \n",
     "\n",
     "## Product specifications VBI isolation slabfloor A200\n",
     "\n",
@@ -98,12 +108,15 @@
     "| Moment of inertia             | 680.0 E+06 mm⁴               |\n",
     "| Use of recycled concrete granule | 20% on request             |\n",
     "\n",
-    "```{figure} Images/VBI1.jpg```   \n",
-    "```{figure} Images/VBI2.jpg```   \n",
+    "```{figure} Images/VBI1.jpg\n",
+    "```   \n",
+    "```{figure} Images/VBI2.jpg\n",
+    "```   \n",
     "\n",
     "### Spans\n",
     " \n",
-    "```{figure} Images/HollowCoreSpans.jpg```\n",
+    "```{figure} Images/HollowCoreSpans.jpg\n",
+    "```\n",
     "\n",
     "### Connections (All types of hollow core slabs)\n",
     "\n",
@@ -125,7 +138,8 @@
     "- for bearings on concrete and masonry;\n",
     "- for bearings on a steel substructure where the load needs to be centered.\n",
     "\n",
-    "```{figure} Images/HollowCoreConnections.jpg```\n",
+    "```{figure} Images/HollowCoreConnections.jpg\n",
+    "```\n",
     "\n",
     "## Product specifications VBI isolation slabfloor A320\n",
     "\n",
@@ -143,24 +157,30 @@
     "| Top surface                   | Normal or rough                 |\n",
     "| Use of recycled concrete granule | 20% on request               |\n",
     "\n",
-    "```{figure} Images/VBI3.jpg```  \n",
-    "```{figure} Images/VBI4.jpg```\n",
+    "```{figure} Images/VBI3.jpg\n",
+    "```  \n",
+    "```{figure} Images/VBI4.jpg\n",
+    "```\n",
     "\n",
     "### Spans\n",
     "\n",
-    "```{figure} Images/HollowCoreSpans2.jpg```\n",
+    "```{figure} Images/HollowCoreSpans2.jpg\n",
+    "```\n",
     "\n",
     "### Connections (All types of hollow core slabs)\n",
     "\n",
-    "```{figure} Images/HollowCoreConnections2.jpg```\n",
+    "```{figure} Images/HollowCoreConnections2.jpg\n",
+    "```\n",
     "\n",
     "Support on cavity wall\n",
     "\n",
-    "```{figure} Images/HollowCoreConnections3.jpg```\n",
+    "```{figure} Images/HollowCoreConnections3.jpg\n",
+    "```\n",
     "\n",
     "For walls separating two houses the hollow cores near voids are filled with mortar, mineral wool of polymer foam.\n",
     "\n",
-    "```{figure} Images/HollowCoreConnections4.jpg```\n",
+    "```{figure} Images/HollowCoreConnections4.jpg\n",
+    "```\n",
     "\n",
     "Bearing on console\n",
     "\n",
@@ -182,11 +202,13 @@
     "| H    | 320         | 4.3             | 8.7          | 0.20                 | 2517             | 15               | 11.5             |\n",
     "| K    | 400         | 5.0             | 10.9         | 0.23                 | 4625             | 18               | 14.4             |\n",
     "\n",
-    "```{figure} Images/ProductSpecificationsDycore.jpg```\n",
+    "```{figure} Images/ProductSpecificationsDycore.jpg\n",
+    "```\n",
     "\n",
     "### Spans\n",
     "\n",
-    "```{figure} Images/Dycorespans.jpg```\n",
+    "```{figure} Images/Dycorespans.jpg\n",
+    "```\n",
     "\n",
     "```{note}\n",
     "The graph indicates the maximum distributed load (excluding self weight) for different spans for slabs on two supports\n",
@@ -194,7 +216,8 @@
     " \n",
     "### Connections (All types of hollow core slabs)\n",
     "\n",
-    "```{figure} Images/Integrated_Beams.jpg```"
+    "```{figure} Images/Integrated_Beams.jpg\n",
+    "```"
    ]
   }
  ],
