--- a/book/design/concrete/precast_concrete_planks.ipynb
+++ b/book/design/concrete/precast_concrete_planks.ipynb
@@ -29,8 +29,10 @@
     "Product information: Dycore precast concrete planks. The information on precast planks was written in cooperation with Dycore.\n",
     "```\n",
     "\n",
-    "```{figure} Images/PrecastConcrete_Planks.jpg```  \n",
-    "```{figure} Images/PrecastConcrete_Planks2.jpg```  \n",
+    "```{figure} Images/PrecastConcrete_Planks.jpg\n",
+    "```  \n",
+    "```{figure} Images/PrecastConcrete_Planks2.jpg\n",
+    "```  \n",
     "\n",
     "## Product specifications Dycore precast concrete planks\n",
     "\n",
@@ -46,11 +48,13 @@
     "|                       | - 70 mm / 1.68 kN/m²                                     |\n",
     "|                       | - 80 mm / 1.92 kN/m²                                     |\n",
     "\n",
-    "```{figure} Images/Dycore_Precast.jpg``` \n",
+    "```{figure} Images/Dycore_Precast.jpg\n",
+    "``` \n",
     "\n",
     "## Connections\n",
     "\n",
-    "```{figure} Images/Dycore_Precast2.jpg``` "
+    "```{figure} Images/Dycore_Precast2.jpg\n",
+    "``` "
    ]
   }
  ],
