--- a/book/design/concrete/spans_in_concrete.ipynb
+++ b/book/design/concrete/spans_in_concrete.ipynb
@@ -11,7 +11,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{figure} Images/Spans_Concrete.jpg```    "
+    "```{figure} Images/Spans_Concrete.jpg\n",
+    "```    "
    ]
   }
  ],
