--- a/book/design/steel/buckling.ipynb
+++ b/book/design/steel/buckling.ipynb
@@ -10,7 +10,10 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "```{figure} Images/Buckling_Lengths1.jpg\n",
+    "``` "
+   ]
   }
  ],
  "metadata": {
