--- a/book/design/steel/connections.ipynb
+++ b/book/design/steel/connections.ipynb
@@ -10,7 +10,199 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Cont. column-beam\n",
+    "\n",
+    "### Connection with bolted angles\n",
+    "\n",
+    "```{figure} Images/Column_Beam1.jpg\n",
+    "```\n",
+    "\n",
+    "### Beam-column connection with endplate. The endplate is welded to the beam in the workshop and bolted to the column on site.\n",
+    "\n",
+    "```{figure} Images/Column_Beam1.1.jpg\n",
+    "```\n",
+    "\n",
+    "### Connection with welded enplate, bolted to column\n",
+    "\n",
+    "```{figure} Images/Column_Beam2.jpg\n",
+    "```\n",
+    "\n",
+    "### Beam-column connection with bolted endplates. The beams are also connected to the web of the column.\n",
+    "\n",
+    "```{figure} Images/Column_Beam2.1.jpg\n",
+    "```\n",
+    "\n",
+    "### Connection with elongated endplate, bolted to stiffened column\n",
+    "\n",
+    "```{figure} Images/Column_Beam3.jpg\n",
+    "```\n",
+    "\n",
+    "### A stiffened beam-column connection. This way a rigid steel frame is obtained. A plastic calculation is possible for these structures.\n",
+    "\n",
+    "```{figure} Images/Column_Beam3.1.jpg\n",
+    "```\n",
+    "\n",
+    "## Beam-beam\n",
+    "\n",
+    "### Connection with bolted angles\n",
+    "\n",
+    "```{figure} Images/Beam_Beam1.jpg\n",
+    "``` \n",
+    "\n",
+    "```{figure} Images/Beam_Beam1.1.jpg\n",
+    "```  \n",
+    "\n",
+    "### Connection with welded endplate, bolted to other element  \n",
+    "\n",
+    "```{figure} Images/Beam_Beam2.jpg\n",
+    "``` \n",
+    "\n",
+    "```{figure} Images/Beam_Beam2.1.jpg\n",
+    "``` \n",
+    "\n",
+    "### Connection with elongated endplate, bolted to other (stiffened) element.\n",
+    "\n",
+    "```{figure} Images/Beam_Beam3.jpg\n",
+    "```\n",
+    "\n",
+    "```{figure} Images/Beam_Beam3.1.jpg\n",
+    "```\n",
+    "\n",
+    "## Beam-wall\n",
+    "\n",
+    "### Support on elastomer, with lock bolt\n",
+    "\n",
+    "```{figure} Images/Beam_Wall1.jpg\n",
+    "```  \n",
+    "\n",
+    "### Connection to wall with double bolt\n",
+    "\n",
+    "```{figure} Images/Beam_Wall2.jpg\n",
+    "```  \n",
+    "\n",
+    "### Support with steel axle\n",
+    "\n",
+    "```{figure} Images/Beam_Wall3.jpg\n",
+    "```\n",
+    "\n",
+    "## Center-column-beam\n",
+    "\n",
+    "### Welded endplate with four bolts\n",
+    "\n",
+    "```{figure} Images/Center_Colomn_Beam1.jpg\n",
+    "```  \n",
+    "\n",
+    "### Welded endplate with four bolts with welded stiffeners on beam web\n",
+    "\n",
+    "```{figure} Images/Center_Column_Beam2.jpg\n",
+    "```  \n",
+    "\n",
+    "### Elongated welded endplate with eight bolts, welded stiffeners on beam web\n",
+    "\n",
+    "```{figure} Images/Center_Column_Beam3.jpg\n",
+    "```  \n",
+    "\n",
+    "### Welded endplate with four bolts\n",
+    "\n",
+    "```{figure} Images/Center_Column_Beam4.jpg\n",
+    "```  \n",
+    "\n",
+    "### Welded endplate with welded stiffeners on beam web\n",
+    "\n",
+    "```{figure} Images/Center_Column_Beam5.jpg\n",
+    "```  \n",
+    "\n",
+    "### Welded endplate with welded stiffeners on beam web\n",
+    "\n",
+    "```{figure} Images/Center_Column_Beam6.jpg\n",
+    "```  \n",
+    "\n",
+    "### Simple connection with welded endplate. During erection the beam is bolted into place (car park near Delft public library)\n",
+    "\n",
+    "```{figure} Images/Center_Column_Beam7.jpg\n",
+    "```  \n",
+    "\n",
+    "### Welded endplate with four bolts, placed outside the column section\n",
+    "\n",
+    "```{figure} Images/Column_Column_Beam8.jpg\n",
+    "```  \n",
+    "\n",
+    "## Column-support\n",
+    "\n",
+    "### Column support with welded endplate and a single row of bolts\n",
+    "\n",
+    "```{figure} Images/Column_Support1.jpg\n",
+    "```  \n",
+    "```{figure} Images/Column_Support1.1.jpg\n",
+    "```  \n",
+    "\n",
+    "### Column support with welded endplate and four bolts\n",
+    "\n",
+    "```{figure} Images/Column_Support2.jpg\n",
+    "```   \n",
+    "```{figure} Images/Column_Support2.1.jpg\n",
+    "``` \n",
+    "\n",
+    "### Column support with bolts outside column section for extra stiffness\n",
+    "\n",
+    "```{figure} Images/Column_Support3.jpg\n",
+    "``` \n",
+    "```{figure} Images/Column_Support3.1.jpg\n",
+    "```  \n",
+    "\n",
+    "## End column-beam\n",
+    "\n",
+    "### Welded endplate with two bolts\n",
+    "\n",
+    "```{figure} Images/End_Column_Beam1.jpg\n",
+    "```  \n",
+    "\n",
+    "### Connection with bolted angles\n",
+    "\n",
+    "```{figure} Images/End_Column_Beam2.jpg\n",
+    "``` \n",
+    "\n",
+    "### Welded elongated endplate with top plate and stiffeners for extra stiffness\n",
+    "\n",
+    "```{figure} Images/End_Column_Beam3.jpg\n",
+    "``` \n",
+    "\n",
+    "### Welded endplate with two bolts\n",
+    "\n",
+    "```{figure} Images/End_Column_Beam4.jpg\n",
+    "``` \n",
+    "\n",
+    "### Welded endplate with six bolts\n",
+    "\n",
+    "```{figure} Images/End_Column_Beam5.jpg\n",
+    "``` \n",
+    "\n",
+    "### Welded endplate with extra plate in tension zone and stiffeners\n",
+    "\n",
+    "```{figure} Images/End_Column_Beam6.jpg\n",
+    "```  \n",
+    "\n",
+    "### Welded endplate with four bolts\n",
+    "\n",
+    "```{figure} Images/End_Column_Beam7.jpg\n",
+    "```  \n",
+    "\n",
+    "### Welded elongated endplate with four bolts and stiffeners\n",
+    "\n",
+    "```{figure} Images/End_Column_Beam8.jpg\n",
+    "``` \n",
+    "\n",
+    "### Connection between castellated beam and column. Be aware of the reduced shear capacity of castellated beams\n",
+    "\n",
+    "```{figure} Images/End_Column_Beam9.jpg\n",
+    "```   \n",
+    "\n",
+    "### Beam-column connection using bolted angles\n",
+    "\n",
+    "```{figure} Images/End_Column_Beam10.jpg\n",
+    "```  \n"
+   ]
   }
  ],
  "metadata": {
