--- a/book/design/steel/spans_in_steel.ipynb
+++ b/book/design/steel/spans_in_steel.ipynb
@@ -10,7 +10,10 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "```{figure} Images/Spans_Steel.jpg\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
