--- a/book/design/concrete/bridge_beams.ipynb
+++ b/book/design/concrete/bridge_beams.ipynb
@@ -14,8 +14,10 @@
     "Different fabricators offer prefabricated bridge beams. The beams are available in different shapes: box beams, I-sections and inverted\n",
     "T-sections. This section gives an overview of some possibilities.\n",
     "\n",
-    "```{figure} Images/Bridge_Beams1.jpg```  \n",
-    "```{figure} Images/Bridge_Beams2.jpg```     \n",
+    "```{figure} Images/Bridge_Beams1.jpg\n",
+    "```  \n",
+    "```{figure} Images/Bridge_Beams2.jpg\n",
+    "```     \n",
     "\n",
     "```{note}\n",
     "www.haitsma.nl\n",
@@ -26,7 +28,8 @@
     "\n",
     "## Applications\n",
     "\n",
-    "```{figure} Images/Viaduct.jpg```      \n",
+    "```{figure} Images/Viaduct.jpg\n",
+    "```      \n",
     "\n",
     "The curved viaduct of the tram line crossing the N201 is made from prefab beams with a compressive slab and a bridge deck. The viaduct\n",
     "is supported by pilars on foundation blocks with center to center distances of 20 meters. The foundation blocks are founded on prefab or Fundexpiles.\n",
@@ -52,31 +55,40 @@
     "not be applied without integrating the bridge deck and platforms, while the pilars where already being casted. An additional structural check was\n",
     "necessary to, if necessary, adjust the design.\n",
     "\n",
-    "```{figure} Images/Bridge_Application1.jpg```\n",
-    "```{figure} Images/Bridge_Application2.jpg```\n",
-    "```{figure} Images/Bridge_Application3.jpg```\n",
+    "```{figure} Images/Bridge_Application1.jpg\n",
+    "```\n",
+    "```{figure} Images/Bridge_Application2.jpg\n",
+    "```\n",
+    "```{figure} Images/Bridge_Application3.jpg\n",
+    "```\n",
     "\n",
     "## Bridge beams I\n",
     "\n",
     "### Railbeam structures\n",
-    "```{figure} Images/Railbeam_Structures.jpg```\n",
+    "```{figure} Images/Railbeam_Structures.jpg\n",
+    "```\n",
     "\n",
     "### Box beam structures\n",
-    "```{figure} Images/Boxbeam_Structures.jpg```\n",
+    "```{figure} Images/Boxbeam_Structures.jpg\n",
+    "```\n",
     "\n",
     "### Solid composite structures\n",
-    "```{figure} Images/Solid_Composite_Structures.jpg```\n",
+    "```{figure} Images/Solid_Composite_Structures.jpg\n",
+    "```\n",
     "\n",
     "## Bridge beams II\n",
     "\n",
     "### HKPW profile\n",
-    "```{figure} Images/HKPW_BridgeBeam.jpg```\n",
+    "```{figure} Images/HKPW_BridgeBeam.jpg\n",
+    "```\n",
     "\n",
     "### HPRP profile\n",
-    "```{figure} Images/HPRP_BridgeBeam.jpg```\n",
+    "```{figure} Images/HPRP_BridgeBeam.jpg\n",
+    "```\n",
     "\n",
     "### HKO profile\n",
-    "```{figure} Images/HKO_BridgeBeam.jpg```\n"
+    "```{figure} Images/HKO_BridgeBeam.jpg\n",
+    "```\n"
    ]
   }
  ],
