--- a/book/design/concrete/composite_floors.ipynb
+++ b/book/design/concrete/composite_floors.ipynb
@@ -26,17 +26,24 @@
     "The information on composite floors was written in cooperation with Hody B.V.\n",
     "```\n",
     "\n",
-    "```{figure} Images/CompositeFloors1.jpg```    \n",
+    "```{figure} Images/CompositeFloors1.jpg\n",
+    "```    \n",
     "\n",
-    "```{figure} Images/CompositeFloors2.jpg```    \n",
+    "```{figure} Images/CompositeFloors2.jpg\n",
+    "```    \n",
     "\n",
     "## Applications\n",
     "\n",
-    "```{figure} Images/CompositeApplication1.jpg```   \n",
-    "```{figure} Images/CompositeApplication2.jpg```  \n",
-    "```{figure} Images/CompositeApplication3.jpg```  \n",
-    "```{figure} Images/CompositeApplication4.jpg```  \n",
-    "```{figure} Images/CompositeApplication5.jpg```  \n",
+    "```{figure} Images/CompositeApplication1.jpg\n",
+    "```   \n",
+    "```{figure} Images/CompositeApplication2.jpg\n",
+    "```  \n",
+    "```{figure} Images/CompositeApplication3.jpg\n",
+    "```  \n",
+    "```{figure} Images/CompositeApplication4.jpg\n",
+    "```  \n",
+    "```{figure} Images/CompositeApplication5.jpg\n",
+    "```  \n",
     "\n",
     "## Execution aspects\n",
     "\n",
@@ -52,9 +59,11 @@
     "\n",
     "## Product specifications HODY SB60 floor\n",
     "\n",
-    "```{figure} Images/CompositeFloors1.jpg```    \n",
+    "```{figure} Images/CompositeFloors1.jpg\n",
+    "```    \n",
     "\n",
-    "```{figure} Images/CompositeFloors2.jpg```  \n",
+    "```{figure} Images/CompositeFloors2.jpg\n",
+    "```  \n",
     "\n",
     "| Plate Reinforcement       |                                                               |\n",
     "|---------------------------|---------------------------------------------------------------|\n",
