--- a/book/design/concrete/prefab_prestressed_beams.ipynb
+++ b/book/design/concrete/prefab_prestressed_beams.ipynb
@@ -11,8 +11,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{figure} Images/Prefab_Prestressed.jpg``` \n",
-    "```{figure} Images/Prefab_Prestressed2.jpg``` \n",
+    "```{figure} Images/Prefab_Prestressed.jpg\n",
+    "``` \n",
+    "```{figure} Images/Prefab_Prestressed2.jpg\n",
+    "``` \n",
     "\n",
     "```{note}\n",
     "www.haitsma.nl\n",
@@ -23,14 +25,17 @@
     "\n",
     "These tables indicate possible prestressed beams available on the market.\n",
     "\n",
-    "```{figure} Images/Haitsma_Prestressed.jpg``` \n",
-    "```{figure} Images/Haitsma_Prestressed2.jpg``` \n",
+    "```{figure} Images/Haitsma_Prestressed.jpg\n",
+    "``` \n",
+    "```{figure} Images/Haitsma_Prestressed2.jpg\n",
+    "``` \n",
     "\n",
     "### Spans\n",
     "\n",
     "For I-shaped beams type HRI / HDI\n",
     "\n",
-    "```{figure} Images/Haitsma_Spans.jpg```\n",
+    "```{figure} Images/Haitsma_Spans.jpg\n",
+    "```\n",
     "\n",
     "```{note}\n",
     "These graphs are based on C55/65\n",
@@ -40,13 +45,17 @@
     "\n",
     "These tables indicate possible prestressed beams available on the market.\n",
     "\n",
-    "```{figure} Images/Haitsma_Prestressed_Rectangular.jpg```  \n",
-    "```{figure} Images/Haitsma_Prestressed_Rectangular2.jpg```     \n",
+    "```{figure} Images/Haitsma_Prestressed_Rectangular.jpg\n",
+    "```  \n",
+    "```{figure} Images/Haitsma_Prestressed_Rectangular2.jpg\n",
+    "```     \n",
     "\n",
     "### Spans\n",
     "\n",
-    "```{figure} Images/Haitsma_Prestressed_Rectangular_Spans.jpg```  \n",
-    "```{figure} Images/Haitsma_Prestressed_Rectangular_Spans2.jpg```     \n",
+    "```{figure} Images/Haitsma_Prestressed_Rectangular_Spans.jpg\n",
+    "```  \n",
+    "```{figure} Images/Haitsma_Prestressed_Rectangular_Spans2.jpg\n",
+    "```     \n",
     "\n",
     "```{note}\n",
     "These graphs are based on C55/65\n",
