--- a/book/design/concrete/reinforcement_tables.ipynb
+++ b/book/design/concrete/reinforcement_tables.ipynb
@@ -12,9 +12,12 @@
    "metadata": {},
    "source": [
     "## Bending and normal force\n",
-    "```{figure} Images/Brick 1.png```    \n",
+    "```{figure} Images/Brick 1.png\n",
+    "```    \n",
+    "\n",
     "## Reinforcement table for bending moments\n",
-    "```{figure} Images/Reinforcement_Table1.jpg```\n",
+    "```{figure} Images/Reinforcement_Table1.jpg\n",
+    "```\n",
     "\n",
     "- Strength Class: Represents the range from C20/25 to C45/55.  \n",
     "- Reinforcement Steel: Indicates the reinforcement steel type.  \n",
@@ -24,7 +27,8 @@
     "\n",
     "a = distance from center of reinforcement to edge of concrete.\n",
     "\n",
-    "```{figure} Images/Reinforcement_Table2.jpg```    \n",
+    "```{figure} Images/Reinforcement_Table2.jpg\n",
+    "```    \n",
     "\n",
     "- Strength Class: Represents C55/67.  \n",
     "- Reinforcement Steel: Indicates the reinforcement steel type.  \n",
@@ -34,7 +38,8 @@
     "\n",
     "a = distance from center of reinforcement to edge of concrete.\n",
     "\n",
-    "```{figure} Images/Reinforcement_Table3.jpg```    \n",
+    "```{figure} Images/Reinforcement_Table3.jpg\n",
+    "```    \n",
     "\n",
     "- Strength Class: Represents C20/25 till C45/55.  \n",
     "- Reinforcement Steel: Indicates the reinforcement steel type.  \n",
@@ -44,7 +49,8 @@
     "\n",
     "a = distance from center of reinforcement to edge of concrete.\n",
     "\n",
-    "```{figure} Images/Reinforcement_Table4.jpg```    \n",
+    "```{figure} Images/Reinforcement_Table4.jpg\n",
+    "```    \n",
     "\n",
     "- Strength Class: Represents C20/25 till C45/55.  \n",
     "- Reinforcement Steel: Indicates the reinforcement steel type.  \n",
@@ -54,7 +60,8 @@
     "\n",
     "a = distance from center of reinforcement to edge of concrete.\n",
     "\n",
-    "```{figure} Images/Reinforcement_BendingMomentjpg```    \n",
+    "```{figure} Images/Reinforcement_BendingMomentjpg\n",
+    "```    \n",
     "\n",
     "```{note}\n",
     "Slabs need to be dimensioned for shear and deflection first. Then the reinforcement ratio can be determined.\n",
