--- a/book/design/steel/steel_structures.ipynb
+++ b/book/design/steel/steel_structures.ipynb
@@ -10,7 +10,121 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Steel columns\n",
+    "```{figure} Images/Steel_Columns1.jpg\n",
+    "```  \n",
+    "single storey:\n",
+    "$h_{st} = 2 - 8 m$\n",
+    "$d = h_{st}/20 - h_{st}/25$\n",
+    "  \n",
+    "multi storey:\n",
+    "$h_st = 2 - 4 m$\n",
+    "$d = h_{st}/7 - h_{st}/18$\n",
+    "\n",
+    "```{figure} Images/Steel_Columns2.jpg\n",
+    "```  \n",
+    "single storey:\n",
+    "$h_{st} = 2 - 8 m$\n",
+    "$d = h_{st}/20 - h_{st}/35$\n",
+    "  \n",
+    "multi storey:\n",
+    "$h_{st} = 2 - 4 m$\n",
+    "$d = h_{st}/7 - h_{st}/28$\n",
+    "\n",
+    "```{figure} Images/Steel_Columns3.jpg\n",
+    "```  \n",
+    "$h_{st} = 2 - 4 m$\n",
+    "$d = h_{st}/6 - h_{st}/15$\n",
+    "\n",
+    "## Main floorbeams\n",
+    "```{figure} Images/Main_Floorbeams1.jpg\n",
+    "```  \n",
+    "l = 4 - 12 m\n",
+    "h = 100 - 500 mm\n",
+    "h = l/18 - l/28\n",
+    "\n",
+    "```{figure} Images/Main_Floorbeams2.jpg\n",
+    "```  \n",
+    "l = 6 - 30 m\n",
+    "h = 200 - 500 mm\n",
+    "h = l/15 - l/20\n",
+    "\n",
+    "```{figure} Images/Main_Floorbeams3.jpg\n",
+    "```  \n",
+    "l = 12 - 45 m\n",
+    "h = 1000 - 4000 mm\n",
+    "h = l/8 - l/15\n",
+    "\n",
+    "```{figure} Images/Main_Floorbeams4.jpg\n",
+    "```  \n",
+    "l = 7 - 15 m\n",
+    "h = 300 - 1000 mm\n",
+    "h = l/20 - l/25\n",
+    "\n",
+    "## Floors\n",
+    "```{figure} Images/Composite_Floors.jpg\n",
+    "```  \n",
+    "l = 2 - 4 m\n",
+    "h = 100 - 150 mm\n",
+    "h = l/25 - l/30\n",
+    "\n",
+    "## Main roofbeams\n",
+    "```{figure} Images/Roofbeams1.jpg\n",
+    "```  \n",
+    "l = 6 - 14 m\n",
+    "h = 100 - 500 mm\n",
+    "h = l/20 - l/30\n",
+    "\n",
+    "```{figure} Images/Roofbeams2.jpg\n",
+    "```\n",
+    "l = 12 - 75 m\n",
+    "h = l/10 - l/18\n",
+    "\n",
+    "```{figure} Images/Roofbeams3.jpg\n",
+    "```  \n",
+    "l = 5 - 28 m\n",
+    "h = 300 - 1000\n",
+    "h = l/15 - l/25\n",
+    "\n",
+    "```{figure} Images/Roofbeams4.jpg\n",
+    "``` \n",
+    "= 8 - 20 m\n",
+    "h = 300 - 1000\n",
+    "h = l/5 - l/10\n",
+    "\n",
+    "```{figure} Images/Roofbeams5.jpg\n",
+    "```  \n",
+    "l = 30 - 150 m\n",
+    "h = l/15 - l/30\n",
+    "\n",
+    "## Purlins roofstructures\n",
+    "```{figure} Images/Purlins1.jpg\n",
+    "```  \n",
+    "l = 3 - 12 m\n",
+    "h = 120 - 300 mm\n",
+    "h = l/25 - l/35\n",
+    "\n",
+    "```{figure} Images/Purlins2.jpg\n",
+    "```  \n",
+    "l = 6 - 40 m\n",
+    "h = 200 - 1000 mm\n",
+    "h = l/18 - l/26\n",
+    "\n",
+    "\n",
+    "## Roofing plates\n",
+    "```{figure} Images/Roofing_Plate1.jpg\n",
+    "```  \n",
+    "l = 5 - 28 m\n",
+    "h = 300 - 1000\n",
+    "h = l/15 - l/25\n",
+    "\n",
+    "```{figure} Images/Roofing_Plate2.jpg\n",
+    "```  \n",
+    "l = 2 - 3 m\n",
+    "h = 75 mm\n",
+    "h = l/25 - l/30\n"
+   ]
   }
  ],
  "metadata": {
