spans in timber added in design

--- a/book/design/timber/spans_in_timber.ipynb
+++ b/book/design/timber/spans_in_timber.ipynb
@@ -4,7 +4,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Spans in timber"
+    "# Spans in timber\n",
+    "\n",
+    "```{figure} Images/spans_in_timber.png\n",
+    "---\n",
+    "---\n",
+    "Spans in timber\n",
+    "```\n",
+    "\n",
+    "```{admonition} Used symbols\n",
+    "$l$ = span  \n",
+    "$s$ = spacing  \n",
+    "$a$ = cantilever  \n",
+    "$h$ = height of the beam  \n",
+    "$f$ = height of roof ridge  \n",
+    "$r$ = bending radius  \n",
+    "$\\alpha$ = slope  \n",
+    "```"
    ]
   },
   {
