--- a/book/design/timber/timber_structures_and_details.ipynb
+++ b/book/design/timber/timber_structures_and_details.ipynb
@@ -4,7 +4,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Timber structures and details\n"
+    "# Timber structures and details\n",
+    "\n",
+    "## Straight beam (possibly with precamber)\n",
+    "\n",
+    "## Straight beam (possibly with cantilever)\n",
+    "\n",
+    "## Saddle roof with inclined upper edge\n",
+    "\n",
+    "## Saddle roof with inclined or curved upper and lower edge\n",
+    "\n",
+    "## Continuous beams\n",
+    "\n",
+    "## Straight truss\n",
+    "\n",
+    "## Triangular or trapezoidal truss\n",
+    "\n",
+    "## Under stressed beam\n",
+    "\n",
+    "## Rigid frame\n",
+    "\n",
+    "## Three hinged frame (straight legs)\n",
+    "\n",
+    "## Three hinged frame (curved/kinked legs)\n",
+    "\n",
+    "## Arch (solid and truss beam)\n"
    ]
   },
   {
