part of timber structures and details in design

--- a/book/design/timber/timber_structures_and_details.ipynb
+++ b/book/design/timber/timber_structures_and_details.ipynb
@@ -7,18 +7,216 @@
     "# Timber structures and details\n",
     "\n",
     "## Straight beam (possibly with precamber)\n",
+    "```{figure} Images/straight_beam_precamber.png\n",
+    "---\n",
+    "---\n",
+    "Straight beam (possibly with precamber)\n",
+    "```\n",
+    "\n",
+    "```{admonition} Rules of thumb\n",
+    "**Solid tiber beams**  \n",
+    "$l = 2 - 6 m$  \n",
+    "$h = \\frac{l}{15} - \\frac{l}{20} m$\n",
+    "\n",
+    "**Glulam beams**  \n",
+    "$s < 5 m \\rightarrow  h = \\frac{l}{17}$  \n",
+    "$s = 5 - 8 m \\rightarrow  h = \\frac{l}{16}$\n",
+    "```\n",
+    "\n",
+    "```{figure} Images/straight_beam_precamber_shapes.png\n",
+    "---\n",
+    "---\n",
+    "Possible shapes\n",
+    "```\n",
+    "\n",
+    "```{figure} Images/straight_beam_precamber_details.png\n",
+    "---\n",
+    "---\n",
+    "Details (left: support on continuous column; middle: support on concrete wall; right: support on double timber column (by means of support block))\n",
+    "```\n",
     "\n",
     "## Straight beam (possibly with cantilever)\n",
+    "```{figure} Images/straight_beam_cantilever.png\n",
+    "---\n",
+    "---\n",
+    "Straight beam (possibly with cantilever)\n",
+    "```\n",
+    "\n",
+    "```{admonition} Rules of thumb\n",
+    "**Glulam beams**  \n",
+    "$l = 30 m$  \n",
+    "$s = 3.6 - 5.4 m$  \n",
+    "$a = 0.25 \\cdot l \\rightarrow  h = \\frac{l}{16} - \\frac{l}{21}$  \n",
+    "$s = 3 - 5 m$  \n",
+    "$a = 0.4 \\cdot l \\rightarrow  h = \\frac{l}{18} - \\frac{l}{24}$\n",
+    "```\n",
+    "\n",
+    "```{figure} Images/straight_beam_cantilever_shapes.png\n",
+    "---\n",
+    "---\n",
+    "Possible shapes\n",
+    "```\n",
+    "\n",
+    "```{figure} Images/straight_beam_cantilever_details.png\n",
+    "---\n",
+    "---\n",
+    "Details (left: support of purlins on main beam by means of Z-profile; middle: double beam on a double timber column (bolted); right: beam on timber column, with steel connector plate (bolted))\n",
+    "```\n",
     "\n",
     "## Saddle roof with inclined upper edge\n",
+    "```{figure} Images/saddle_roof_inclined.png\n",
+    "---\n",
+    "---\n",
+    "Saddle roof with inclined upper edge\n",
+    "```\n",
+    "\n",
+    "```{admonition} Rules of thumb\n",
+    "**Glulam beam**  \n",
+    "$l = 6 - 30 m$  \n",
+    "$h_1 = \\frac{l}{14} - \\frac{l}{18}$  \n",
+    "$h_2 = \\frac{l}{18} - \\frac{l}{22}$\n",
+    "```\n",
+    "\n",
+    "```{figure} Images/saddle_roof_inclined_shapes.png\n",
+    "---\n",
+    "---\n",
+    "Possible shapes\n",
+    "```\n",
+    "\n",
+    "```{figure} Images/saddle_roof_inclined_details.png\n",
+    "---\n",
+    "---\n",
+    "Details (left: beam on wall, welded steel connection; middle: connection between beam and double column (bolted); right: beam-beam connection with steel connector plate (Dutch: gerberligger))\n",
+    "```\n",
     "\n",
     "## Saddle roof with inclined or curved upper and lower edge\n",
+    "```{figure} Images/saddle_roof_curved.png\n",
+    "---\n",
+    "---\n",
+    "Saddle roof with inclined or curved upper and lower edge\n",
+    "```\n",
+    "\n",
+    "```{admonition} Rules of thumb\n",
+    "**Glulam beams**  \n",
+    "$l = 7 - 40 m$  \n",
+    "$s = 5 - 7 m \\rightarrow  h = \\frac{l}{14} - \\frac{l}{18}$  \n",
+    "$f = \\frac{l}{5} - \\frac{l}{10}$  \n",
+    "$r \\geq 6 m$\n",
+    "```\n",
+    "\n",
+    "```{figure} Images/saddle_roof_curved_shapes.png\n",
+    "---\n",
+    "---\n",
+    "Possible shapes\n",
+    "```\n",
+    "\n",
+    "```{figure} Images/saddle_roof_curved_details.png\n",
+    "---\n",
+    "---\n",
+    "Details (left: beam-column connection (nailed plates); middle: support on wall, full hinge with slotted hole (screwed steel plate); right: purlin-beam connection with steel connector, load acts on top of main beam)\n",
+    "```\n",
+    "\n",
+    "The upper edges need lateral support.\n",
+    "\n",
+    "```{warning}\n",
+    "The curved shape causes tension pependicular to the grain.\n",
+    "```\n",
     "\n",
     "## Continuous beams\n",
+    "```{figure} Images/continuous_beam.png\n",
+    "---\n",
+    "---\n",
+    "Continuous beam\n",
+    "```\n",
+    "\n",
+    "```{admonition} Rules of thumb\n",
+    "**Glulam beams**  \n",
+    "$l = 6 - 30 m$  \n",
+    "$s < 5 m \\rightarrow  h = \\frac{l}{34}$  \n",
+    "$s = 5 - 8 m \\rightarrow  h = \\frac{l}{30}$\n",
+    "\n",
+    "**Glulam trusses**  \n",
+    "$l = 10 - 80 m$  \n",
+    "$s = 2 - 5 m \\rightarrow  h = \\frac{l}{16} - \\frac{l}{18}$\n",
+    "```\n",
+    "\n",
+    "```{figure} Images/continuous_beam_shapes.png\n",
+    "---\n",
+    "---\n",
+    "Possible shapes\n",
+    "```\n",
+    "\n",
+    "```{figure} Images/continuous_beam_details.png\n",
+    "---\n",
+    "---\n",
+    "Details (left: beam-beam connection with steel connector plate; middle: heavy support (welded); right: truss connection (with column) wih coupler plate and dowels)\n",
+    "```\n",
+    "\n",
+    "The upper edges need lateral support.\n",
     "\n",
     "## Straight truss\n",
     "\n",
+    "```{figure} Images/straight_truss.png\n",
+    "---\n",
+    "---\n",
+    "Straight truss\n",
+    "```\n",
+    "\n",
+    "```{admonition} Rules of thumb\n",
+    "**Solid timber**  \n",
+    "$l = 5 - 25 m$  \n",
+    "$s = 2.5 - 6 m \\rightarrow  h = \\frac{l}{10} - \\frac{l}{14}$  \n",
+    "\n",
+    "**Glulam**  \n",
+    "$l = 20 - 80 m$  \n",
+    "$s = 2.5 - 6 m \\rightarrow  h = \\frac{l}{10} - \\frac{l}{15}$\n",
+    "```\n",
+    "\n",
+    "```{figure} Images/straight_truss_shapes.png\n",
+    "---\n",
+    "---\n",
+    "Possible shapes\n",
+    "```\n",
+    "\n",
+    "```{figure} Images/straight_truss_details.png\n",
+    "---\n",
+    "---\n",
+    "Details (left: connection of tensile bars (steel strips) to bottom chord and compressive strut (coupler plate); middle: connection between bottom chord and diagonals with screwed steel plates and central axle; right: connection between bottom chord and diagonals with screwed steel plates and central axle)\n",
+    "```\n",
+    "\n",
+    "The upper chords (under compression) must be supported laterally in all trusses. For truss type 1 the bottom chord also needs lateral support to prevent the tensile chord from twisting out of plane.\n",
+    "\n",
     "## Triangular or trapezoidal truss\n",
+    "\n",
+    "```{figure} Images/triangular_truss.png\n",
+    "---\n",
+    "---\n",
+    "Triangular or trapezoidal truss\n",
+    "```\n",
+    "\n",
+    "```{admonition} Rules of thumb\n",
+    "**Glulam beam**  \n",
+    "$l = 7.5 - 30 m$  \n",
+    "$s = 4 - 10 m \\rightarrow  h = \\frac{l}{10}$  \n",
+    "\n",
+    "**Glulam saddle roof**  \n",
+    "$l = 7.5 - 30 m$  \n",
+    "$s = 4 - 10 m \\rightarrow  h = \\frac{l}{12}$  \n",
+    "```\n",
+    "\n",
+    "```{figure} Images/triangular_truss_shapes.png\n",
+    "---\n",
+    "---\n",
+    "Possible shapes\n",
+    "```\n",
+    "\n",
+    "```{figure} Images/triangular_truss_details.png\n",
+    "---\n",
+    "---\n",
+    "Details (left: connection of upper chord, diagonals and vertical with coupler plate; middle: connection of bottom chord, diagonals and vertical with toothed plate; right: connection of upper chord and vertical with carpentry joint)\n",
+    "```\n",
+    "\n",
+    "The upper chords need lateral support.\n",
     "\n",
     "## Under stressed beam\n",
     "\n",
