timber structures and details in design guidelines finished

--- a/book/design/timber/timber_structures_and_details.ipynb
+++ b/book/design/timber/timber_structures_and_details.ipynb
@@ -220,13 +220,173 @@
     "\n",
     "## Under stressed beam\n",
     "\n",
+    "```{figure} Images/under_stressed_beam.png\n",
+    "---\n",
+    "---\n",
+    "Under stressed beam\n",
+    "```\n",
+    "\n",
+    "```{admonition} Rules of thumb\n",
+    "**Glulam beam**  \n",
+    "$l = 8 - 80 m$  \n",
+    "$h = \\frac{l}{15} - \\frac{l}{20}$  \n",
+    "```\n",
+    "\n",
+    "```{figure} Images/under_stressed_beam_shapes.png\n",
+    "---\n",
+    "---\n",
+    "Possible shapes\n",
+    "```\n",
+    "\n",
+    "```{figure} Images/under_stressed_beam_details.png\n",
+    "---\n",
+    "---\n",
+    "Details (left: connection of the tensile bar at the support; middle: connection of the tensile bars and compressive strut with welded plates; right: connection of the tensile bars and diagonals with dowels)\n",
+    "```\n",
+    "\n",
+    "The upper edges need lateral support. The tensile bars also need lateral support to prevent twisting out of plane.\n",
+    "\n",
     "## Rigid frame\n",
+    "\n",
+    "```{figure} Images/rigid_frame.png\n",
+    "---\n",
+    "---\n",
+    "Rigid frame\n",
+    "```\n",
+    "\n",
+    "```{admonition} Rules of thumb\n",
+    "**Glulam beam**  \n",
+    "$l = 10 - 40 m$  \n",
+    "$s = 4 - 8 m$  \n",
+    "$h = \\frac{l}{15} - \\frac{l}{20}$  \n",
+    "```\n",
+    "\n",
+    "```{figure} Images/rigid_frame_shapes.png\n",
+    "---\n",
+    "---\n",
+    "Possible shapes\n",
+    "```\n",
+    "\n",
+    "```{figure} Images/rigid_frame_details.png\n",
+    "---\n",
+    "---\n",
+    "Details (left: column-floor support with angle profiles and welded endplate (bolted); middle: moment resisting joint between double column and beam (dowels); right: column-floor support with cast-in plates (bolted))\n",
+    "```\n",
+    "\n",
+    "This floor support connection is only suitable for low horizontal forces.\n",
     "\n",
     "## Three hinged frame (straight legs)\n",
     "\n",
+    "```{figure} Images/three_hinged_frame.png\n",
+    "---\n",
+    "---\n",
+    "Three hinged frame (straight legs)\n",
+    "```\n",
+    "\n",
+    "```{admonition} Rules of thumb\n",
+    "**Glulam beams, no tensile bar**  \n",
+    "$l = 10 - 50 m$  \n",
+    "$f = \\frac{l}{3}$  \n",
+    "$s = 5 - 8 m$  \n",
+    "$h = \\frac{l}{30} - \\frac{l}{50}$  \n",
+    "\n",
+    "**Glulam beams, with tensile bar**  \n",
+    "$l = 15 - 50 m$  \n",
+    "$f = \\frac{l}{6}$  \n",
+    "$s = 5 - 8 m$  \n",
+    "$h = \\frac{l}{30} - \\frac{l}{50}$  \n",
+    "```\n",
+    "\n",
+    "```{figure} Images/three_hinged_frame_shapes.png\n",
+    "---\n",
+    "---\n",
+    "Possible shapes\n",
+    "```\n",
+    "```{Note}\n",
+    "$l = 15 - 50 m$  \n",
+    "$s = 5 - 8 m$  \n",
+    "$h = \\frac{l}{15} - \\frac{l}{25}$  \n",
+    "```\n",
+    "\n",
+    "```{figure} Images/three_hinged_frame_details.png\n",
+    "---\n",
+    "---\n",
+    "Details (left: simple support, concrete footing with elastomeric bearing; middle: connection of double tensile bar to double column; right: column support on concrete footing with cast in plates (screwed))\n",
+    "```\n",
+    "\n",
+    "This floor support connection is only suitable for low horizontal forces.\n",
+    "\n",
     "## Three hinged frame (curved/kinked legs)\n",
     "\n",
-    "## Arch (solid and truss beam)\n"
+    "```{figure} Images/three_hinged_kinked.png\n",
+    "---\n",
+    "---\n",
+    "Three hinged frame (curved/kinked legs)\n",
+    "```\n",
+    "\n",
+    "```{admonition} Rules of thumb\n",
+    "**Frame with kinked corners**  \n",
+    "$l = 15 - 50 m$  \n",
+    "$\\alpha = 20 ^{\\circ}$  \n",
+    "$s = 4 - 5 m \\rightarrow h_{kink} = \\frac{l + g}{28} and h_{foot} = 0.4 \\cdot h_{kink}$  \n",
+    "$s = 5 - 9 m \\rightarrow h_{kink} = \\frac{l + g}{24} and h_{foot} = 0.4 \\cdot h_{kink}$  \n",
+    "\n",
+    "**Frame with bent corners**  \n",
+    "$l = 15 - 50 m$  \n",
+    "$r = 3.5 - 5 m$  \n",
+    "$\\alpha = 20 ^{\\circ}$\n",
+    "$s = 4 - 5 m \\rightarrow h_{kink} = \\frac{l + g}{31} and h_{ridge} = 0.5 \\cdot h_{kink} and h_{foot} = 0.67 \\cdot h_{kink}$  \n",
+    "$s = 5 - 9 m \\rightarrow h_{kink} = \\frac{l + g}{26} and h_{ridge} = 0.5 \\cdot h_{kink} and h_{foot} = 0.67 \\cdot h_{kink}$  \n",
+    "```\n",
+    "\n",
+    "```{figure} Images/three_hinged_kinked_shapes.png\n",
+    "---\n",
+    "---\n",
+    "Possible shapes\n",
+    "```\n",
+    "\n",
+    "```{figure} Images/three_hinged_kinked_details.png\n",
+    "---\n",
+    "---\n",
+    "Details (left: ridge connection with tensile connection and moulded I-profile; middle: ridge connection (bolted); right: support on concrete footing with \n",
+    "welded steel plate)\n",
+    "```\n",
+    "\n",
+    "This floor support connection is only suitable for low horizontal forces.\n",
+    "\n",
+    "## Arch (solid and truss beam)\n",
+    "\n",
+    "```{figure} Images/arch.png\n",
+    "---\n",
+    "---\n",
+    "Arch (solid and truss beam)\n",
+    "```\n",
+    "\n",
+    "```{admonition} Rules of thumb\n",
+    "**Glulam beam**  \n",
+    "$l = 20 - 100 m$  \n",
+    "$f = \\frac{l}{5} - \\frac{l}{7}$ \n",
+    "$s = \\leq 5 m \\rightarrow h = \\frac{l}{45}$  \n",
+    "$s = 5 - 9 m \\rightarrow h = \\frac{l}{40}$  \n",
+    "\n",
+    "**Glulam truss**  \n",
+    "$l = 50 - 120 m$  \n",
+    "$f = \\frac{l}{5} - \\frac{l}{8}$ \n",
+    "$s = 5 - 10 m$  \n",
+    "$h = \\frac{l}{20} - \\frac{l}{40}$\n",
+    "```\n",
+    "\n",
+    "```{figure} Images/arch_shapes.png\n",
+    "---\n",
+    "---\n",
+    "Possible shapes\n",
+    "```\n",
+    "\n",
+    "```{figure} Images/arch_details.png\n",
+    "---\n",
+    "---\n",
+    "Details (left: ridge connection with steel connectors (dowel); middle: support of arch (welded steel hinge); right: arch support)\n",
+    "```"
    ]
   },
   {
