design timber trusses and joints added

--- a/book/design/timber/trusses_and_joints.ipynb
+++ b/book/design/timber/trusses_and_joints.ipynb
@@ -4,7 +4,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Trusses and joints"
+    "# Trusses and joints\n",
+    "\n",
+    "```{figure} Images/truss_and_joints.png\n",
+    "---\n",
+    "align: right\n",
+    "---\n",
+    "Truss joint\n",
+    "```\n",
+    "Timber trusses are available in different sizes and shapes. Also the joints can be designed in numerous ways. Mostly the connection elements discussed above are used, but some special connections are available.\n",
+    "\n",
+    "```{figure} Images/connection_bottom_diagonal.png\n",
+    "---\n",
+    "---\n",
+    "Connection between bottom chord and diagonals with steel plates with a central axle\n",
+    "```\n",
+    "\n",
+    "```{figure} Images/truss_punched_metal.png\n",
+    "---\n",
+    "---\n",
+    "Truss connections by means of punched metal plates\n",
+    "\n",
+    "```\n",
+    "\n",
+    "```{figure} Images/truss_space_frames.png\n",
+    "---\n",
+    "---\n",
+    "Space frames\n",
+    "```"
    ]
   },
   {
