add information and design guide foundations

--- a/book/design/foundations/design_guide.ipynb
+++ b/book/design/foundations/design_guide.ipynb
@@ -4,7 +4,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Design guide"
+    "# Design guide\n",
+    "\n",
+    "The design guide contains several important issues for foundation design. Before starting the design, first information needs to be obtained. Of course the local soil conditions are necessary, but also the general layout of the structure needs to be known. With this information a sensible choice can be made of the different foundation methods. Finally a design calculation and strength check need to be made. This calculation is not always in the scope of the courses using this document. Mostly only the \n",
+    "general design and foundation method are important.\n",
+    "\n",
+    "**Reconnaissance**\n",
+    "- building layout\n",
+    "- soil conditions\n",
+    "- foundation loads \n",
+    "\n",
+    "**Foundation method**\n",
+    "- relation between foundation and structure\n",
+    "- foundation method \n",
+    "- connection between main \n",
+    "structure and foundation\n",
+    "- foundation depth\n",
+    "\n",
+    "**Check**\n",
+    "- calculation of connection between structure and foundation\n",
+    "- calculation of slab- or pile foundation or sheet piling"
    ]
   },
   {
