--- a/book/design/foundations/information.ipynb
+++ b/book/design/foundations/information.ipynb
@@ -4,7 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Information"
+    "# Information\n",
+    "\n",
+    "## Sources and keywords\n",
+    "\n",
+    "  - **Internet**\n",
+    "    - [vroom.nl](https://vroom.nl/en/products/cast-in-situ-piles/): detailed information on: Prefab piles, Wood piles, Steel pipe piles, Vibro-piles, Vibro-combi-piles, Concrete screw piles, DPA piles, and Tubular screw piles.\n",
+    "    - [walinco.nl](https://www.walinco.nl/): special foundation methods with clear explanation, photos and videos\n"
    ]
   },
   {
