foundation tables and images

--- a/book/design/foundations/tables.ipynb
+++ b/book/design/foundations/tables.ipynb
@@ -4,7 +4,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tables"
+    "# Tables\n",
+    "\n",
+    "## Available lengths\n",
+    "```{figure} Images/available_lengths_table.png\n",
+    "---\n",
+    "---\n",
+    "```\n",
+    "\n",
+    "## Indication design value of maximum bearing capacity\n",
+    "```{figure} Images/bearing_capacity_table.png\n",
+    "---\n",
+    "---\n",
+    "```\n",
+    "\n",
+    "```{warning}\n",
+    "Indication of the design value of the maximum bearing capacity based on the pile cross section. Note that local soil conditions always need to be taken into account to accurately calculate the maximum bearing capacity.\n",
+    "```\n",
+    "\n"
    ]
   },
   {
